--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -109,13 +110,11 @@
       </section>
     </main>
     <footer>
-      <section>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </section>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
